CSS changes to fix alignment

--- a/src/lrshared_modules/components/changepassword/change-password.component.scss
+++ b/src/lrshared_modules/components/changepassword/change-password.component.scss
@@ -1,5 +1,8 @@
 .card{
     margin-bottom: 0px;
+    .card-header{
+        padding-top: 0px;
+    }
 }
 .modal-body {
 .form-group {
